feat: add payout function fix: fixed endpoint url distinguishing between crypto and fiat fix: fixed the status types chore: add docs
