# src/apps/views/payments.go
@@ -2,6 +2,7 @@ package views
 
 import (
 	"context"
+	"fmt"
 	"net/http"
 	"socious-id/src/apps/auth"
 	"socious-id/src/apps/models"
@@ -9,13 +10,14 @@ import (
 	"socious-id/src/config"
 
 	"github.com/gin-gonic/gin"
+	"github.com/jmoiron/sqlx/types"
 	"github.com/stripe/stripe-go/v81"
 )
 
 func paymentsGroup(router *gin.Engine) {
 	g := router.Group("payments")
 
-	g.GET("cards", auth.LoginRequired(), func(c *gin.Context) {
+	g.GET("/fiat/cards", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
 
 		stripeCustomerID := identity.Meta["stripe_customer_id"]
@@ -36,7 +38,7 @@ func paymentsGroup(router *gin.Engine) {
 		})
 	})
 
-	g.POST("/cards", auth.LoginRequired(), func(c *gin.Context) {
+	g.POST("/fiat/cards", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
 		ctx := c.MustGet("ctx").(context.Context)
 
@@ -101,7 +103,7 @@ func paymentsGroup(router *gin.Engine) {
 		c.JSON(http.StatusOK, paymentMethod)
 	})
 
-	g.DELETE("/cards/:id", auth.LoginRequired(), func(c *gin.Context) {
+	g.DELETE("/fiat/cards/:id", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
 		id := c.Param("id")
 
@@ -121,7 +123,96 @@ func paymentsGroup(router *gin.Engine) {
 		c.JSON(http.StatusOK, gin.H{"message": "success"})
 	})
 
-	g.GET("/wallets", auth.LoginRequired(), func(c *gin.Context) {
+	g.GET("/fiat/payout", auth.LoginRequired(), func(c *gin.Context) {
+		identity := c.MustGet("identity").(*models.Identity)
+
+		oc, err := models.GetOauthConnectByIdentityId(identity.ID, models.OauthConnectedProvidersStripeJp)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, oc)
+	})
+
+	g.GET("/fiat/payout/connect", auth.LoginRequired(), func(c *gin.Context) {
+		ctx := c.MustGet("ctx").(context.Context)
+		identity := c.MustGet("identity").(*models.Identity)
+		userRedirectUrl := c.Query("redirect_url")
+
+		fiatService := config.Config.Payment.Fiats[0]
+		account, err := fiatService.CreateAccount("JP")
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+		redirectURL := fmt.Sprintf("%s?stripe_account=%s", fiatService.Callback, account.ID)
+
+		link, err := fiatService.CreateAccountLink(account, redirectURL)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		oc := models.OauthConnect{
+			IdentityID:     identity.ID,
+			MatrixUniqueID: account.ID,
+			AccessToken:    "",
+			Provider:       models.OauthConnectedProvidersStripeJp, //WARNING: Hardcoded
+			RedirectURL:    &userRedirectUrl,
+			IsConfirmed:    false,
+		}
+
+		if err := oc.Upsert(ctx); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, gin.H{
+			"url": link,
+		})
+	})
+
+	g.GET("/fiat/payout/callback/stripe", func(c *gin.Context) {
+		ctx := c.MustGet("ctx").(context.Context)
+		stripeAccount := c.Param("stripe_account")
+
+		oc, err := models.GetOauthConnectByMUI(stripeAccount, models.OauthConnectedProvidersStripeJp)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		if stripeAccount != "" {
+			fiatService := config.Config.Payment.Fiats[0]
+
+			acc, _ := fiatService.FetchAccount(stripeAccount)
+			accountJson := types.JSONText(acc.LastResponse.RawJSON)
+
+			//Updating the OauthConnect
+			oc.Meta = &accountJson
+			oc.Status = models.StatusTypeInactive
+			oc.IsConfirmed = true
+			if acc.PayoutsEnabled {
+				oc.Status = models.StatusTypeActive
+			}
+
+			err = oc.Upsert(ctx)
+			if err != nil {
+				c.Redirect(http.StatusTemporaryRedirect, fmt.Sprintf("%s?status=failed&error=%s",
+					*oc.RedirectURL,
+					err.Error(),
+				))
+			}
+
+			c.Redirect(http.StatusTemporaryRedirect, fmt.Sprintf("%s?status=failed&error=%s",
+				*oc.RedirectURL,
+				err.Error(),
+			))
+		}
+	})
+
+	g.GET("/crypto/wallets", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
 
 		wallets, err := models.GetWallets(identity.ID)
@@ -133,7 +224,7 @@ func paymentsGroup(router *gin.Engine) {
 		c.JSON(http.StatusOK, wallets)
 	})
 
-	g.POST("/wallets", auth.LoginRequired(), func(c *gin.Context) {
+	g.POST("/crypto/wallets", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
 		ctx := c.MustGet("ctx").(context.Context)
 
